Restruct some of the code. add database testing apache 2.4 friendly update ssl.cnf Add some documentation

--- a/templates/hub/hub.conf.erb
+++ b/templates/hub/hub.conf.erb
@@ -171,3 +171,10 @@ LockOut = <%= @lockout %>
 ## OfflineMessage as the fault string).
 ## If LockOut is True, the server will report a ServerOffline fault for all non-admin
 ## requests.
+
+[policy]
+build_from_srpm =
+    tag * :: allow
+    has_perm admin :: allow
+    all :: all
+
