--- a/templates/koji.conf.erb
+++ b/templates/koji.conf.erb
@@ -15,6 +15,7 @@ topurl = <%= @topurl %>
 ;topdir = /mnt/koji
 
 ;configuration for SSL authentication
+authtype = ssl
 
 ;client certificate
 cert = <%= @cert %>
