--- a/templates/hub/root_config.erb
+++ b/templates/hub/root_config.erb
@@ -11,16 +11,19 @@ server = http://<%= @fqdn %>/kojihub
 ;url of web interface
 weburl = http://<%= @fqdn %>/koji
 
+;topurl
+topurl = http://<%= @fqdn %>/kojifiles
+
 ;path to the koji top directory
 topdir = /mnt/koji
 
 ;configuration for SSL athentication
 
 ;client certificate
-cert = ~/.koji/root.pem
+cert = /etc/pki/koji/certs/kojiadmin.pem
 
 ;certificate of the CA that issued the client certificate
-ca = ~/.koji/koji_ca_cert.crt
+ca = /etc/pki/koji/certs/koji_ca_cert.crt
 
 ;certificate of the CA that issued the HTTP server certificate
-serverca = ~/.koji/koji_ca_cert.crt
+serverca = /etc/pki/koji/certs/koji_ca_cert.crt
