--- a/templates/web/kojiweb_httpd.conf.erb
+++ b/templates/web/kojiweb_httpd.conf.erb
@@ -8,8 +8,13 @@ Alias /koji "/usr/share/koji-web/scripts/wsgi_publisher.py"
 <Directory "/usr/share/koji-web/scripts/">
     Options ExecCGI
     SetHandler wsgi-script
-    Order allow,deny
-    Allow from all
+    <IfVersion < 2.4>
+        Order allow,deny
+        Allow from all
+    </IfVersion>
+    <IfVersion >= 2.4>
+        Require all granted
+    </IfVersion>
 </Directory>
 
 # Support for mod_python is DEPRECATED. If you still need mod_python support,
@@ -54,8 +59,13 @@ Alias /koji-static/ "/usr/share/koji-web/static/"
 <Directory "/usr/share/koji-web/static/">
     Options None
     AllowOverride None
-    Order allow,deny
-    Allow from all
+    <IfVersion < 2.4>
+        Order allow,deny
+        Allow from all
+    </IfVersion>
+    <IfVersion >= 2.4>
+        Require all granted
+    </IfVersion>
 </Directory>
 
 Alias /kojifiles/ /mnt/koji/
@@ -63,9 +73,11 @@ Alias /kojifiles/ /mnt/koji/
 <Directory "/mnt/koji/">
     Options Indexes FollowSymLinks
     AllowOverride None
-    # Apache < 2.4
-    Order allow,deny
-    Allow from all
-    # Apache >= 2.4
-    #Require all granted
+    <IfVersion < 2.4>
+        Order allow,deny
+        Allow from all
+    </IfVersion>
+    <IfVersion >= 2.4>
+        Require all granted
+    </IfVersion>
 </Directory>
